# SqLatticePercolation

./: .gitignore  CMakeLists.txt  main.cpp  script.sh
Docs/: Data file format.md  cmd.args.txt  convention.txt  data_file_format.txt  definitions.md  filename-format.txt  readme.txt  spanning  symbols.txt  time_percolation.txt  todo.txt
Docs/branch/: finding-site-percolation-bug
Docs/tex/: SquareLatticePercolation.aux  SquareLatticePercolation.tex
Docs/versions/: version09.md  version10.md  version11.md  version12.md  version14.md
python/: SitePercolation_ps_v10_lattice_L400_2019-12-02_193551.txt  SitePercolation_ps_v10_lattice_L400_2019-12-02_195310.txt  SitePercolation_ps_v10_lattice_L400_2019-12-02_195315.txt  SitePercolation_ps_v10_lattice_L400_2019-12-02_195319.txt  plot_lattice.py
src/: flags.h  helper.cpp  helper.h  latticeConfiguration.cpp  latticeConfiguration.h  logs.cpp  logs.h  main.cpp  types.h  ziff_algorithm.cpp  ziff_algorithm.h
src/cmdLineArgs/: cmd_args.cpp  cmd_args.h  cmd_args_json.cpp  cmd_args_json.h  percolation_fractal.cpp  percolation_fractal.h  sq_lattice_methods.h
src/ensemble/: site_percolation.cpp  site_percolation.h
src/exception/: exceptions.cpp  exceptions.h
src/ext_libs/: inverse_array.h
src/fractal/: fractal_tool.cpp  fractal_tool.h
src/index/: delta.cpp  delta.h  id.cpp  id.h  index.cpp  index.h
src/lattice/: bond.cpp  bond.h  bond_type.h  connector.cpp  connector.h  lattice.cpp  lattice.h  lattice_v12.cpp  lattice_v2.cpp  site.cpp  site.h
src/percolation/: boundary.cpp  boundary.h  calculation.cpp  calculation.h  cluster.cpp  cluster.h  cluster_v2.cpp  id_index.cpp  id_index.h  percolation.cpp  percolation.h  percolation_bond_v0.cpp  percolation_bond_v1.cpp  percolation_bond_v2.cpp  percolation_site_ballistic_deps.cpp  percolation_site_ballistic_deps_v2.cpp  percolation_site_explosive.cpp  percolation_site_v10.cpp  percolation_site_v8.cpp  percolation_site_v9.cpp  percolation_type.h  percolation_v12.cpp  percolation_v12.h  percolation_v2.cpp  percolation_v2.h  site_position.cpp  site_position.h
src/percolation/bond/: percolation_bond_v1.cpp  percolation_bond_v1.h  percolation_bond_v12.cpp  percolation_bond_v12.h  percolation_bond_v2.cpp  percolation_bond_v2.h  percolation_bond_v3.cpp  percolation_bond_v3.h
src/percolation/cluster/: cluster.cpp  cluster.h  cluster_v4.cpp
src/percolation/site/: percolation_site_ballistic.h  percolation_site_ballistic_deps_v2.cpp  percolation_site_ballistic_deps_v3.cpp  percolation_site_ballistic_deps_v4.cpp  percolation_site_explosive.cpp  percolation_site_explosive.h  percolation_site_v10.cpp  percolation_site_v10.h  percolation_site_v11.cpp  percolation_site_v11.h  percolation_site_v12.cpp  percolation_site_v12.h  percolation_site_v9.cpp  percolation_site_v9.h
src/tests/: test_bonds.cpp  test_bonds.h  test_lattice.cpp  test_lattice.h  test_percolation.cpp  test_percolation.h  test_v10.cpp  test_v10.h  test_v11.cpp  test_v11.h  test_v12.cpp  test_v12.h  test_v13.cpp  test_v13.h  test_v14.cpp  test_v14.h  test_v9.cpp  test_v9.h
src/util/: checking.cpp  checking.h  printer.cpp  printer.h  time_tracking.cpp  time_tracking.h
src/v13/: bond_v13.cpp  bond_v13.h  cluster.cpp  cluster.h  element_v13.cpp  element_v13.h  index_v13.cpp  index_v13.h  lattice_v13.cpp  lattice_v13.h  lattice_v14.cpp  lattice_v14.h  percolation_rsbd_v13.cpp  percolation_rsbd_v13.h  percolation_v13.cpp  percolation_v13.h  percolation_v13_bond.cpp  percolation_v13_bond.h  run_v13.cpp  run_v13.h  site_v13.cpp  site_v13.h  status.h
